fix the numbering spacing #163

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ html {
   padding-top: 100px;
   padding-bottom: 100px;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 15;
   max-width: 800px;
   margin: auto;
 }
